--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   flutter_bloc: ^3.0.0
   meta: ^1.1.0
   shared_preferences:
+  http:
+  connectivity_plus: ^1.0.6
 
 
 dev_dependencies:
